<resources>
    <string name="app_name">Cartalog</string>
    <string name="phone_number">Номер телефона</string>
    <string name="enter_code">Введите СМС код</string>
    <string name="registration">Введите свой номер телефона для регистрации в приложении!</string>
    <string name="plus_seven">+7</string>
    <string name="ok">OK</string>
    <string name="wait_code">Дождитесь СМС с кодом регистрации</string>
    <string name="search_title">asd</string>
    <string name="search_hint">sad</string>
    <string name="find_part">Найти запчасть</string>
    <string name="find_service">Записаться на СТО</string>
    <string name="find_car_wash">Автомойки</string>
    <string name="find_tyre_service">Шинные центры</string>
    <string name="change_oil">Замена масла</string>
    <string name="car_wash">Aвтомойки</string>
    <string name="add_part_hint">Выберите автомобиль и найдите запчасть!</string>
    <string name="find_service_hint">Опишите поломку и найдите СТО!</string>
    <string name="choose_car">Выбор автомобиля</string>
    <string name="describe_part">Опишите деталь</string>
    <string name="auto_make">Марка автомобиля</string>
    <string name="auto_model">Модель</string>
    <string name="auto_VIN">VIN или номер кузова</string>
    <string name="auto_year">Год</string>
    <string name="back">НАЗАД</string>
    <string name="describe_malfunction">Опишите поломку</string>
    <string name="time">ВРЕМЯ</string>
    <string name="feedback">Обратная связь</string>
    <string name="profile">Профиль</string>
    <string name="contactUS">Связаться с нами</string>
    <string name="snack_bar_undo">Отменить</string>
    <string name="auto">Автомобиль:</string>
    <string name="descr">Описание:</string>
    <string name="change">И3МЕНИТЬ</string>
    <string name="delete">УДАЛИТЬ</string>
    <string name="areYouSure">Удалить заявку?</string>
    <string name="no_offers">На вашу заявку пока не ответили</string>
    <string name="offers">Предложения от магазинов:</string>
    <string name="handbook">Справочник</string>
    <string name="insurance">Автострахование</string>
    <string name="autoparts">Автозапчасти</string>
    <string name="autoshop">Автомагазин</string>
    <string name="car_service">Автосервисы</string>
    <string name="mnfri">пн - пт</string>
    <string name="adress">Адрес</string>
    <string name="work_hours">Рабочее время</string>
    <string name="message">Сообщение...</string>
    <string name="feedbackText">Если у вас возникли трудности, вы обнаружили ошибку, у вас есть предложение или вы хотите стать партнером - напишите нам сообщение и мы обязательно его обработаем!</string>
    <string name="action_search">Марка или модель...</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="E">E</string>
    <string name="F">F</string>
    <string name="G">G</string>
    <string name="H">H</string>
    <string name="I">I</string>
    <string name="J">J</string>
    <string name="K">K</string>
    <string name="L">L</string>
    <string name="M">M</string>
    <string name="N">N</string>
    <string name="O">O</string>
    <string name="P">P</string>
    <string name="R">R</string>
    <string name="S">S</string>
    <string name="T">T</string>
    <string name="V">V</string>
    <string name="W">W</string>
    <string name="X">X</string>
    <string name="Z">Z</string>
    <string name="GG">Г</string>
    <string name="ZZ">З</string>
    <string name="II">И</string>
    <string name="LL">Л</string>
    <string name="YY">У</string>
    <string name="mn">ПН</string>
    <string name="tu">ВТ</string>
    <string name="wed">СР</string>
    <string name="fh">ЧТ</string>
    <string name="fr">ПТ</string>
    <string name="sa">СБ</string>
    <string name="su">ВС</string>
    <string name="th">ЧТ</string>
    <string name="name">Имя</string>
    <string name="offer">Предложение</string>
    <string name="chat">Чат</string>
    <string name="autoservice">Автосервисы</string>
    <string name="alignment">3D развал-схождение</string>
    <string name="image">Изображение</string>
    <string name="VIN">VIN:</string>
    <string name="lastmessage">последнее сообщение…</string>
    <string name="loadingImage">Изображение загружается…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title1">Начните искать запчасти для вашего автомобиля по-новому...</string>
    <string name="description1">Больше не нужно ездить по всему городу в поисках нужной детали!</string>
    <string name="title2">Любые автозапчасти в наличии и под заказ</string>
    <string name="description2">Доставка самолетом и морем в кратчайшие сроки и по самым выгодным ценам!</string>
    <string name="title3">Запишитесь на ремонт!</string>
    <string name="description3">Опишите поломку, автосервисы свяжутся с Вами. Обсудите детали во встроенном чате! </string>
    <string name="title4">Экономьте свое время и деньги!</string>
    <string name="description4">Доверьте ремонт и подбор запчастей для вашего авто профессионалам</string>
    <string name="changesApplied">Вы вносите изменения в заявку. Все полученные ответы будут удалены.</string>
    <string name="default_notification_channel_id">1</string>
    <string name="close">Закрыть приложение?</string>
    <string name="nointernet">Подключите интернет!</string>
    <string name="choose_city">Ваш город</string>
    <string name="offers2">Предложения от автосервисов:</string>
    <string name="push">Push уведомления</string>
    <string name="notifications_on">notificationsOn</string>
    <string name="imageDownloaded">Изображение сохранено</string>
    <string name="timeOffset">timeOffset</string>
    <string name="updateApp">Обновите приложение</string>
    <string name="try_again">Проверьте ваше интернет соединение и попробуйте снова!</string>
    <string name="adv">Реклама</string>
    <string name="cartalog">CARTALOG</string>
    <string name="cartalog1">CARTALOG!</string>
    <string name="Error">Ошибка, попробуйте снова</string>
    <string name="pressOk">Нажмите ОК</string>
    <string name="getSmsCode">Получить код по СМС</string>
    <string name="welcome">Добро пожаловать в</string>
    <string name="registration1">Регистрация</string>
    <string name="registration2">Зарегистрироваться!</string>
    <string name="enter_phone_number">Для регистрации в приложении введите ваш номер телефона</string>

</resources>
