<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity.LoginActivity"
    android:focusableInTouchMode="true"
    android:background="@color/black">

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/ic_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:background="@drawable/ic_bot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/activity_login_ImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_marginTop="25dp"
            android:id="@+id/activity_login_TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_login_TextInputLayout1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:textColorHint="@color/white"
            app:boxStrokeColor="@color/white"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_login_TextInputEditText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789+"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:text="@string/plus_seven"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/activity_login_MaterialButton"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="15dp"
            android:text="@string/ok"
            android:visibility="invisible"
            app:strokeColor="@color/white"
            app:strokeWidth="2dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>