<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FeedbackActivity.FeedbackActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_feedback_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAppBar"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/activity_feedback_back_ImageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_close_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_feedback_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feedback"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/feedbackText"
            android:textColor="@color/color_dark_blue" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_feedback_TextInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/message"
            android:textColorHint="@color/dark_grey2"
            app:boxStrokeColor="@color/colorAppBar"
            app:hintTextAppearance="@style/hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_feedback_TextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/color_dark_blue"
                android:textColorHint="@color/color_dark_blue"
                android:textCursorDrawable="@drawable/color_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/activity_feedback_back_TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/back"
                android:textColor="@color/colorAppBar"
                android:textSize="16sp" />

            <Button
                android:id="@+id/activity_feedback_ok_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAppBar_dark"
                android:text="@string/ok" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>