<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".RequestActivity.RequestActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_request_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorAppBar"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/activity_request_back_ImageButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/ic_close_black_24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/activity_request_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/find_part"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_request_auto_make_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/auto_make"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/colorAppBar"
            app:hintTextAppearance="@style/hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_request_make_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_request_auto_model_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/auto_model"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/colorAppBar"
            app:hintTextAppearance="@style/hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_request_model_EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_grey"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_request_auto_VIN_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_weight="1"
                android:hint="@string/auto_VIN"
                android:textColorHint="@color/dark_grey"
                app:boxStrokeColor="@color/colorAppBar"
                app:hintTextAppearance="@style/hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_request_VIN_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/activity_request_auto_year_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_weight="2"
                android:hint="@string/auto_year"
                android:textColorHint="@color/dark_grey"
                app:boxStrokeColor="@color/colorAppBar"
                app:hintTextAppearance="@style/hint_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_request_year_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_grey"
                    android:textCursorDrawable="@drawable/color_cursor" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/activity_request_describe_part_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/describe_part"
            android:textColorHint="@color/dark_grey"
            app:boxStrokeColor="@color/colorAppBar"
            app:hintTextAppearance="@style/hint_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/activity_request_description_EditText"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:textColor="@color/black"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/dark_grey"
                android:textCursorDrawable="@drawable/color_cursor" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_request_back_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textColor="@color/colorAppBar"
                android:text="@string/back"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/activity_request_ok_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/colorAppBar"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>